--- a/covid-19-simulator.css
+++ b/covid-19-simulator.css
@@ -14,4 +14,16 @@ body {
 	font-size: 0.75em;
 	background: rgba(255,255,255,0.75);
 	padding: 0.1em 0.5em;
+	text-transform: uppercase;
+}
+
+#hud .link {
+	text-decoration: none;
+	
+}
+
+#hud img, #hud .link img {
+	height: 1.2em;
+	position: relative;
+	top:0.3em;
 }
