Added possibility to share links including config parameters

--- a/covid-19-configurator.css
+++ b/covid-19-configurator.css
@@ -189,3 +189,15 @@ tr {
 td {
 	/*border: solid 1px red;*/
 }
+
+.syslink { /* buttons that must look like links */
+	background: none;
+	border: none;
+	cursor: point;
+	color: CornflowerBlue;
+}
+
+.syslink:hover {
+	background: CornflowerBlue;
+	color: White;
+}
