--- a/covid-19-configurator.css
+++ b/covid-19-configurator.css
@@ -84,7 +84,7 @@ h3.caption {
 	background-repeat: repeat-x;
 }
 
-.block input {
+.block input, .block select {
 	font-weight: bold;
 	position: relative;
 	top: -0.1em;
@@ -92,6 +92,23 @@ h3.caption {
 	background: none;
 	text-align: right;
 	font-size: 1.2em;
+}
+
+.block select {
+	text-transform: uppercase;
+	padding-right: 0.5em;
+	direction: rtl;
+	border: none;
+	outline: solid 1px white;
+	outline-offset: -1px;
+}
+
+.block select option {
+	font-size: 75%;
+	text-transform: uppercase;
+	direction: rtl;
+	border: none;
+	outline: none;
 }
 
 .block input[type="checkbox"] {
