--- a/covid-19-configurator.css
+++ b/covid-19-configurator.css
@@ -228,10 +228,13 @@ h2 .info {
 .start {
 	background: CornflowerBlue;
 	color: White;
-	padding: 0.25em 1em;
+	padding: 0.35em 1em 0.25em 1em;
 	text-decoration: none;
 	text-transform: uppercase;
+	border: none;
 	border-bottom: 0.2em solid white;
+	font-size: 1em;
+	cursor: pointer;
 }
 
 .start:hover {
