--- a/covid-19-simulator.css
+++ b/covid-19-simulator.css
@@ -4,6 +4,11 @@ body {
 	overflow: hidden;
 }
 
+/*canvas{
+    font-smooth: never;
+    -webkit-font-smoothing : none;
+}*/
+
 #hud {
 	position: fixed;
 	top: 0;
