Fixed #60 Button [Share] is not shown in configurator in Opera

--- a/covid-19-configurator.css
+++ b/covid-19-configurator.css
@@ -168,7 +168,7 @@ h4.caption ~ .info{
 	color: DimGray;
 }
 
-h2 .info {
+h2 .info-persistant {
 	display: block;
 	font-size: 0.6em;
 	font-weight: 300;
