--- a/covid-19-configurator.css
+++ b/covid-19-configurator.css
@@ -1,4 +1,5 @@
 body {
+	position: relative;
 	background-color: white;
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
@@ -289,7 +290,7 @@ tr {
 	}
 	
 td {
-	border: dashed 1px red;
+	#border: dashed 1px red;
 }
 
 .mainsyslink { /* buttons that must look like links */
@@ -380,10 +381,11 @@ input.slider {
 	width: 100%;
 	padding-left: 0;
 	position: relative;
-	top: -0.3em;
+	top: -0.2em;
 	-webkit-appearance: none;
 	height: 0.3em;
 	background: gray;
+	border-radius: 0.3em;
 	outline: none;
 	opacity: 0;
 }
@@ -395,8 +397,8 @@ table:hover input.slider {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 23px;
-  height: 23px;
+  width: 22px;
+  height: 22px;
   border-radius: 50%; 
   background: white;
   border: gray solid 4px;
@@ -408,8 +410,8 @@ table:hover input.slider {
 }
 
 .slider::-moz-range-thumb {
-  width: 23px;
-  height: 23px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   background: white;
   border: gray solid 4px;
@@ -422,7 +424,10 @@ table:hover input.slider {
 
 canvas {
 	position: absolute;
-	width: 100%;
-	height: 1em;
-	border: solid 1px red;
+	width: 10em;
+	height: 30px;
+	#border: solid 1px orange;
+	z-index: 1;
+	pointer-events: none;
+	#image-rendering: pixelated; 
 }
